feat: Implement API caching service with automatic cache management
- Added ApiCacheService to handle API requests with caching capabilities.
- Introduced CacheManagerService for centralized cache management and statistics.
- Developed CacheService to simulate Redis-like behavior using localStorage/sessionStorage.
- Created types for Crypto and Quiniela services to enhance type safety.
- Configured Tailwind CSS with custom themes and animations for improved UI.